--- a/src/main/resources/templates/index5_qltb.html
+++ b/src/main/resources/templates/index5_qltb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi" xmlns:th="htttp://www.thymeleaf.org">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
@@ -794,3 +794,4 @@
         </script>
 
 
+</div>
