--- a/src/main/resources/templates/index2_qlch.html
+++ b/src/main/resources/templates/index2_qlch.html
@@ -243,7 +243,7 @@
                                             <input type="text" class="form-control" placeholder="Tên căn hộ...">
                                         </div>
                                         <div class="col-md-2">
-                                            <input type="number" class="form-control" placeholder="Số phòng ngủ">
+                                            <input type="text" class="form-control" placeholder="Số phòng ngủ">
                                         </div>
                                         <div class="col-md-2">
                                             <select class="form-select">
@@ -345,7 +345,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="bedrooms" class="form-label">Số phòng ngủ</label>
-                        <input type="number" class="form-control" id="bedrooms" required>
+                        <input type="text" class="form-control" id="bedrooms" required>
                     </div>
                     <div class="mb-3">
                         <label for="bathrooms" class="form-label">Số phòng tắm</label>
