--- a/src/main/resources/templates/index3_qlhd.html
+++ b/src/main/resources/templates/index3_qlhd.html
@@ -346,11 +346,11 @@
     <div class="modal fade" id="contractModal" tabindex="-1" aria-labelledby="contractModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header"></div>
+                <div class="modal-header">
                     <h5 class="modal-title" id="contractModalLabel">Thêm hợp đồng</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body"></div>
+                <div class="modal-body">
                     <form th:action="@{/quanlyhopdong/create}" th:object="${contract}" method="post">
                         <div class="mb-3">
                             <label for="apartmentId" class="form-label">Căn hộ</label>
