--- a/src/main/resources/templates/index3_qlhd.html
+++ b/src/main/resources/templates/index3_qlhd.html
@@ -351,7 +351,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form th:action="@{/quanlyhopdong/create}" th:object="${contract}" method="post">
+                    <form th:action="@{/hopdong/create}" th:object="${contract}" method="post">
                         <div class="mb-3">
                             <label for="apartmentId" class="form-label">Căn hộ</label>
                             <input type="text" class="form-control" id="apartmentId" th:field="*{apartmentId}">
