--- a/src/main/resources/templates/index3_qlhd.html
+++ b/src/main/resources/templates/index3_qlhd.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
     <!-- Font Awesome 4.2.0 -->
-    <link rel="stylesheet" href="assets/font-awesome/4.2.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" integrity="sha512-ZfKn7az0YmtPUojZnRXO4CUdt3pn+WYxGgpCpb+JDMrYicj9Ly6hJAJ27SUjhiMeMmz+NMDz6Mnv9IMvcmvEA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Bootstrap Icons CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
