--- a/src/main/resources/templates/index3_qlhd.html
+++ b/src/main/resources/templates/index3_qlhd.html
@@ -690,9 +690,24 @@
 			 $('.sidebar .nav-link').removeClass('active');
 			 $(this).addClass('active');
 		 });
+
+
+         
 	 </script>
+    <script>
+        document.querySelector('.btn-primary[data-bs-toggle="modal"]').addEventListener('click', function() {
+            var contractModal = new bootstrap.Modal(document.getElementById('contractModal'));
+            contractModal.show();
+        });
+    </script>
 
-
+    <script>
+        $(document).ready(function() {
+            $('#btnAddContract').on('click', function() {
+                $('#contractModal').modal('show');
+            });
+        });
+    </script>
 </body>
 </style>
 </html>
